<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:contentDescription="@string/img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/logotext" />

        <TextView
            android:id="@+id/silakan"
            android:text="@string/silakan_login_untuk_memakai_aplikasi"
            android:layout_below="@id/imgLogo"
            android:textAlignment="center"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/hint_username"
            android:id="@+id/etUsername"
            android:layout_below="@id/silakan"
            android:drawableStart="@drawable/ic_username"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/fab_margin"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/password"
            android:id="@+id/etPassword"
            android:layout_below="@id/etUsername"
            android:autofillHints="@string/password"
            android:drawableStart="@drawable/ic_pw"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnsignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_sign_in" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnsignin"
            android:layout_marginTop="16dp"
            android:text="@string/create_a_new_account"
            android:textAlignment="center" />



    </RelativeLayout>

</LinearLayout>